# CMakeLearning

./: readme.txt
Chaper10_GeneratorExpression/: CMakeLists.txt  note.txt
Chaper8_FunctionsAndMacros/: CMakeLists.txt  note.txt
Chaper9_Properties/: note.txt
Chapter10_GeneratorExpression/: note.txt
Chapter8_FunctionsAndMacros/: note.txt
